--- a/action-a/action.yml
+++ b/action-a/action.yml
@@ -7,6 +7,10 @@ inputs:
     description: "Who to greet"
     required: true
     default: "World"
+  MY_AGE:
+    description: "age"
+    required: true
+    default: "10"
 
 runs:
   using: "docker"
