--- a/action-a/action.yml
+++ b/action-a/action.yml
@@ -7,7 +7,7 @@ inputs:
     description: "Who to greet"
     required: true
     default: "World"
-  MY_AGE:
+  myAge:
     description: "age"
     required: true
     default: "10"
